--- a/styles/style.css
+++ b/styles/style.css
@@ -808,7 +808,10 @@
 .footer-dark{background-color:#0b0b0b;}
 .footer-dark .copyright-text{border-top:solid 1px rgba(255,255,255,0.05); color:#656465;}
 .footer-dark .footer-socials a{color:#FFFFFF;}
-.footer-dark .footer-text{color:#b7b7b7!important; border-bottom:solid 1px rgba(255,255,255,0.05);}
+.footer-dark .footer-text{
+    color: #b7b7b7!important;
+    /* [disabled]border-bottom:solid 1px rgba(255,255,255,0.05); */
+}
 .footer-dark .footer-logo{background-image:url(../images/logo-light.png);}
 
 .footer-light{padding-top:0px!important;}
@@ -860,11 +863,11 @@
 }
 
 .footer-text{
-	margin-left:20px;
-	margin-right:20px;
-	text-align:center;
-	padding-bottom:30px;
-	padding-top:10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
+    /* [disabled]padding-bottom: 30px; */
+    padding-top: 10px;
 }
 
 .footer-socials:after{
